# telco-churn

./: .gitignore  1_preprocessing.py  2_model_selection.py  3_hyperparameter_tuning.py  4_train.py  5_evaluate.py  6_promote_to_production.py  7_inference.py  CLAUDE.md  dvc.yaml  eda.ipynb  experiment.py  load_model.py  main.py  model_selection_results.yaml  outputs.dvc  preprocessing.py  pyproject.toml  requirements.txt  train.py  trained_model.joblib
.dvc/: config
config_schemas/: config_schema.py  preprocessing_schema.py
configs/: best_model.yaml  config.yaml
configs/mlflow/: mlflow.yaml
configs/model/: knn.yaml  logistic_regression.yaml  random_forest.yaml  svm.yaml
configs/preprocessing/: complex_preprocessor.yaml  default.yaml  simple_preprocessor.yaml
configs/tuning/: grid.yaml
data/: .gitignore  cleaned_data.csv.dvc  data.csv.dvc  test.csv  train.csv
outputs/2025-10-01/16-17-48/.hydra/: config.yaml  hydra.yaml
outputs/2025-10-01/16-21-05/.hydra/: config.yaml  hydra.yaml
outputs/2025-10-01/16-27-22/.hydra/: hydra.yaml
outputs/2025-10-01/16-31-39/.hydra/: hydra.yaml  overrides.yaml
outputs/2025-10-01/16-32-19/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2025-10-01/16-32-24/.hydra/: hydra.yaml  overrides.yaml
outputs/2025-10-01/16-33-58/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2025-10-01/16-34-31/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2025-10-01/16-35-16/.hydra/: config.yaml  hydra.yaml
src/: preprocessing.py  train.py
trained_models/: .gitignore
(+12 files in other folders)
